kubetrain-k8s/training/argo-workflows/overlays/aws/argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
      - name: argo-server
        args:
        - server
        - --namespaced
        - --auth-mode=client
        - --auth-mode=sso
