kubetrain-k8s/training/argo-workflows/overlays/aws/minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-write-timeout: 3600
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.k8s-training.aws-tests.skyworkz.nl/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.k8s-training.aws-tests.skyworkz.nl/oauth2/start?rd=/redirect/$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: minio.k8s-training.aws-tests.skyworkz.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
  tls:
  - hosts:
    - minio.k8s-training.aws-tests.skyworkz.nl
